--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_01/Ejercicios_Workout/02_Ejercicios_Markdown_II.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_01/Ejercicios_Workout/02_Ejercicios_Markdown_II.ipynb
@@ -45,12 +45,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "a20102cb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- Manzanas\n",
+    "- Plátanos\n",
+    "- Uvas"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,12 +67,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "e5af15ee",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "1. Arbol binario\n",
+    "2. Random Forest\n",
+    "3. Regresión Logística"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -89,12 +93,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "0fc171fc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "1. Frutas\n",
+    "- Uva\n",
+    "- Manzana\n",
+    "- Pera\n",
+    "2. Verduras\n",
+    "- Calabacín\n",
+    "- Puerro\n",
+    "- Pimiento"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,12 +120,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "2bcc0287",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "[Por aquí se cruzan puentes](www.thebridge.com)\n"
+   ]
   },
   {
    "cell_type": "markdown",
