--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_01/Ejercicios_Workout/02_Ejercicios_Markdown_II.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_01/Ejercicios_Workout/02_Ejercicios_Markdown_II.ipynb
@@ -124,7 +124,8 @@
    "id": "2bcc0287",
    "metadata": {},
    "source": [
-    "[Por aquí se cruzan puentes](www.thebridge.com)\n"
+    "[Por aquí se cruzan puentes](www.thebridge.com)  \n",
+    "![Logo](./img/TheBridge_logo_RGB_color.jpg)"
    ]
   },
   {
@@ -139,11 +140,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "9d31a21a",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "---\n",
+    "```Python\n",
+    "print(Hola Mundo)\n",
+    "```\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09658c50",
+   "metadata": {},
    "source": []
   }
  ],
@@ -163,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
