--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_01/Practica_Obligatoria/05_Practica_obligatoria_markdown.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_01/Practica_Obligatoria/05_Practica_obligatoria_markdown.ipynb
@@ -47,7 +47,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Aptitudes de data science\n",
+    ">**Lo más importante**  \n",
+    "> - Matemáticas\n",
+    "> - Python\n",
+    "> - SQL  \n",
+    "> ![python](./img/python.png)\n",
+    ">\n",
+    ">Otro tema importante es el *Business Intelligence*   \n",
+    ">\n",
+    ">Si tienes dudas, puedes escribirme a: [jaime.gonzalez@thebridgeschool.es](jaime.gonzalez@thebridgeschool.es)  \n",
+    ">\n",
+    "> Y en esta página se aprende mucho de machine learning: [página de ML](https://www.kaggle.com/)  \n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,24 +82,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n"
+    "|Ramp Up|Data Analysis| Machine Learning | Data & Business |\n",
+    "|------------|------------|------------|------------|\n",
+    "| Python    | EDA    | Supervised   | Productivización   |\n",
+    "| Estadística    | R    | Non supervised    |Storytelling   |\n",
+    "| SQL  | Feat. Eng.   | Deep Learning| API   |\n",
+    "<!-- Un espacio en blanco adicional -->\n",
+    "&nbsp;\n",
+    "$$\\sqrt{3x - 1} + (1 + x)^2$$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
