--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_01/Ejercicios_Workout/01_Ejercicios_Markdown_I.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_01/Ejercicios_Workout/01_Ejercicios_Markdown_I.ipynb
@@ -109,12 +109,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "97aca4a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    ">La Ciencia de Datos\n",
+    ">>es el petróleo del siglo XXI."
+   ]
   },
   {
    "cell_type": "markdown",
