--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_01/Ejercicios_Workout/01_Ejercicios_Markdown_I.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_01/Ejercicios_Workout/01_Ejercicios_Markdown_I.ipynb
@@ -45,12 +45,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "b3a2fc32",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Ciencia de Datos\n",
+    "## Introducción\n",
+    "### Herramientas"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,12 +68,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "b0fd666e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Estoy practicando **Markdown** con *Jupyter* y el lenguaje de ***Python***"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,12 +90,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "7aa81d0f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Voy a escribir la palabra <span style=\"background-color:yellow\">resaltado</span> con el fondo amarillo y la palabra <span style=\"color:blue\">color </span> en azul."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -134,11 +136,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "919b170c",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Curso de Markdown\n",
+    "En este curso va a ser muy **importante** lo siguiente:\n",
+    ">\"Aprender es crecer\"\n",
+    "\n",
+    "Por <span style=\"background:green\">ejemplo</span>, con este ejercicio."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89fc0c04",
+   "metadata": {},
    "source": []
   }
  ],
