--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/09_Ejercicios_Python_Basisc_I_1.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/09_Ejercicios_Python_Basisc_I_1.ipynb
@@ -71,10 +71,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¿Por qué esta magnífica tecnología científica,\n",
+      "\t que ahorra trabajo y nos hace la vida más fácil,\n",
+      "\t\t nos aporta tan poca felicidad?\n",
+      "\t\t\t La respuesta es etá, simplemente: porque aún no hemos aprendido a usarla con tino.\n",
+      "\"Albert Einstein\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"¿Por qué esta magnífica tecnología científica,\")\n",
+    "print(\"\\t que ahorra trabajo y nos hace la vida más fácil,\")\n",
+    "print(\"\\t\\t nos aporta tan poca felicidad?\")\n",
+    "print(\"\\t\\t\\t La respuesta es etá, simplemente: porque aún no hemos aprendido a usarla con tino.\")\n",
+    "print('\"Albert Einstein\"')\n"
+   ]
   },
   {
    "attachments": {
@@ -107,10 +125,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Don Pepito', 5, 'Sevilla', 41001)\n",
+      "La calle es Don Pepito, el número es 5, de la ciudad de Sevilla,con cp 41001\n"
+     ]
+    }
+   ],
+   "source": [
+    "calle = \"Don Pepito\"\n",
+    "numero = 5\n",
+    "poblacion = \"Sevilla\"\n",
+    "cp = 41001\n",
+    "direccion = calle, numero, poblacion, cp\n",
+    "print(direccion)\n",
+    "total = (f\"La calle es {calle}, el número es {numero}, de la ciudad de {poblacion},con cp {cp}\")\n",
+    "print(total)"
+   ]
   },
   {
    "attachments": {
@@ -140,10 +176,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Don Pepito', 5, 'Sevilla', 41001)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nEl programa lo que hace es concatenar variables\\n'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Declaramos la variable calle\n",
+    "calle = \"Don Pepito\"\n",
+    "numero = 5 #Declaramos la variable numero\n",
+    "poblacion = \"Sevilla\" #Declaramos la variable poblacion\n",
+    "cp = 41001 #También declaramos la variabel cp\n",
+    "direccion = calle, numero, poblacion, cp #se concatenan las variables en una nueva variable\n",
+    "print(direccion) #mandamos a imprimir\n",
+    "\n",
+    "\"\"\"\n",
+    "El programa lo que hace es concatenar variables\n",
+    "\"\"\""
+   ]
   },
   {
    "attachments": {
@@ -180,10 +246,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 2) (3941000509.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[14], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    otra_var = \"Ejercicio\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_variable = \"Economía\" #Está bien\n",
+    "otra_var = \"Ejercicio  \n",
+    "True = \"Ejercicio\"\n",
+    "mi variab1e = \"Alpha\"\n",
+    "exec = True \n",
+    "import = 40 \n",
+    "81mi_variable = \"Agua\"\n",
+    "mi_variable10 = 6\n",
+    "\n",
+    "#La primera y la última están bien\n",
+    "#2. Le falta cerrar comillas\n",
+    "#3. 5. 6. usan palabras reservadas\n",
+    "#4. nombre de variable con espacios\n",
+    "#7. empieza la variable por número"
+   ]
   },
   {
    "attachments": {
@@ -214,6 +304,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n",
+      "76.92307692307693\n",
+      "23.076923076923077\n"
+     ]
+    }
+   ],
+   "source": [
+    "victorias = 10\n",
+    "derrotas = 3\n",
+    "total_partidos = victorias + derrotas \n",
+    "porcentaje_victorias= (victorias/(victorias+ derrotas)*100)\n",
+    "porcentaje_derrotas= (derrotas/(derrotas + victorias)*100)\n",
+    "\n",
+    "total_partidos\n",
+    "print(total_partidos)\n",
+    "porcentaje_victorias\n",
+    "porcentaje_derrotas\n",
+    "print(porcentaje_victorias)\n",
+    "print(porcentaje_derrotas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "400.0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "porcentaje_victorias"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -236,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
