--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/09_Ejercicios_Python_Basisc_I_1.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/09_Ejercicios_Python_Basisc_I_1.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,19 +79,15 @@
      "output_type": "stream",
      "text": [
       "¿Por qué esta magnífica tecnología científica,\n",
-      "\t que ahorra trabajo y nos hace la vida más fácil,\n",
-      "\t\t nos aporta tan poca felicidad?\n",
-      "\t\t\t La respuesta es etá, simplemente: porque aún no hemos aprendido a usarla con tino.\n",
+      "\tque ahorra tirabajo y nos hace la vida más fácil,\n",
+      "\t\tnos aporta tan poca felicidad?\n",
+      "\t\t\tLa respuesta es esta, simplemente:porque aún no hemos aprendido a usarla con tino.\n",
       "\"Albert Einstein\"\n"
      ]
     }
    ],
    "source": [
-    "print(\"¿Por qué esta magnífica tecnología científica,\")\n",
-    "print(\"\\t que ahorra trabajo y nos hace la vida más fácil,\")\n",
-    "print(\"\\t\\t nos aporta tan poca felicidad?\")\n",
-    "print(\"\\t\\t\\t La respuesta es etá, simplemente: porque aún no hemos aprendido a usarla con tino.\")\n",
-    "print('\"Albert Einstein\"')\n"
+    "print('¿Por qué esta magnífica tecnología científica,\\n\\tque ahorra tirabajo y nos hace la vida más fácil,\\n\\t\\tnos aporta tan poca felicidad?\\n\\t\\t\\tLa respuesta es esta, simplemente:porque aún no hemos aprendido a usarla con tino.\\n\"Albert Einstein\"')"
    ]
   },
   {
@@ -176,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +188,7 @@
        "'\\nEl programa lo que hace es concatenar variables\\n'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,10 +201,31 @@
     "cp = 41001 #También declaramos la variabel cp\n",
     "direccion = calle, numero, poblacion, cp #se concatenan las variables en una nueva variable\n",
     "print(direccion) #mandamos a imprimir\n",
+    "nueva_direccion = calle + \",\" + str(numero) +\",\"+ poblacion + \",\" + str(cp)\n",
     "\n",
     "\"\"\"\n",
     "El programa lo que hace es concatenar variables\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Don Pepito,5,Sevilla,41001'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nueva_direccion"
    ]
   },
   {
