--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/10_Ejercicios_Python_Basisc_I_2.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/10_Ejercicios_Python_Basisc_I_2.ipynb
@@ -61,10 +61,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "15.5\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "variable_entera = 10\n",
+    "variable_decimal = 5.5\n",
+    "print(type(variable_entera))\n",
+    "print(type(variable_decimal))\n",
+    "suma = variable_entera + variable_decimal\n",
+    "print(suma)\n",
+    "print(type(suma))\n",
+    "del variable_entera\n",
+    "del variable_decimal"
+   ]
   },
   {
    "attachments": {
@@ -85,10 +106,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.1693705988362009\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "grados = float(input(\"Escribe los grados, por favor\"))\n",
+    "radianes = grados*(math.pi/180)\n",
+    "print(radianes)"
+   ]
   },
   {
    "attachments": {
@@ -107,10 +141,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "base = float(input(\"Escribe la medida de la base\"))\n",
+    "altura = float(input(\"Escribe la medida de la altura\"))\n",
+    "area_paralelogramo = base * altura \n",
+    "print(area_paralelogramo)"
+   ]
   },
   {
    "attachments": {
@@ -129,10 +176,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "base_nueva = input(\"Escribe la base\")\n",
+    "altura_nueva = input (\"Escribe la altura\")\n",
+    "base_buena = base_nueva.replace(\",\",\".\")\n",
+    "altura_buena = altura_nueva.replace (\",\",\".\")\n",
+    "area_nueva_paralelogramo = float(base_buena) * float(altura_buena)\n",
+    "print(area_nueva_paralelogramo)"
+   ]
   },
   {
    "attachments": {
@@ -151,17 +213,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "María, naciste en el año 1998.\n"
+     ]
+    }
+   ],
    "source": [
-    "nombre = _______(\"¿Cuál es tu nombre? \")\n",
-    "edad = _____(input(\"¿Cuál es tu edad? \"))\n",
-    "año_actual = 2023  # Puedes cambiarlo según el año en curso\n",
-    "año_nacimiento = año_actual - _____\n",
+    "nombre = input(\"¿Cuál es tu nombre? \")\n",
+    "edad = int(input(\"¿Cuál es tu edad? \"))\n",
+    "año_actual = 2024  # Puedes cambiarlo según el año en curso\n",
+    "año_nacimiento = año_actual - edad\n",
     "\n",
     "print(f\"{nombre}, naciste en el año {año_nacimiento}.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -180,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
