--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/11_Ejercicios_Python_Basisc_I_3.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/11_Ejercicios_Python_Basisc_I_3.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,17 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "A = 4\n",
+    "B = \"Text\"\n",
+    "C = 4.1\n",
+    "\n",
+    "print(A == B)\n",
+    "print(A != C)\n",
+    "print(A > C )\n",
+    "print(C <= A)\n",
+    "print(B != C)"
+   ]
   },
   {
    "attachments": {
@@ -104,10 +114,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "primer_input = input(\"Dime tu nombre\")\n",
+    "segundo_input = input(\"Dime tu apellido\")\n",
+    "print(primer_input == segundo_input)\n"
+   ]
   },
   {
    "attachments": {
@@ -126,19 +148,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Todos son iguales: False\n",
-      "Todos son iguales: False\n"
+      "False\n",
+      "False\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "primer_input = input(\"Dime tu nombre\")\n",
+    "segundo_input = input(\"Dime tu apellido\")\n",
+    "tercer_input = input(\"Dime nombre de tu primo\")\n",
+    "print(primer_input == segundo_input == tercer_input)\n",
+    "print(primer_input == segundo_input or primer_input == tercer_input or segundo_input == tercer_input)"
+   ]
   },
   {
    "attachments": {
@@ -157,6 +185,31 @@
     "2. not ((True or False) and (True or False))\n",
     "3. (False or False or False or True) and False\n",
     "4. not False and True and not True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "False\n",
+    "False\n",
+    "False\n",
+    "False\n",
+    "\n",
+    "not False and True and not True"
    ]
   },
   {
@@ -181,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
