--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/12_Ejercicios_Python_Basisc_I_4.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/12_Ejercicios_Python_Basisc_I_4.ipynb
@@ -61,10 +61,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "17\n",
+      "63.451\n",
+      "74\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [4,6,8,-1]\n",
+    "print(max(lista))\n",
+    "print(sum(lista))\n",
+    "numero = 63.451256965\n",
+    "print(round(numero, 3))\n",
+    "print(abs(-74))"
+   ]
   },
   {
    "attachments": {
@@ -92,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -101,14 +119,22 @@
      "text": [
       "EN UN LUGAR DE LA MANCHA, DE CUYO NOMBRE NO QUIERO ACORDARME.\n",
       "en un lugar de la mancha, de cuyo nombre no quiero acordarme.\n",
-      "En Un Lugar De La Mancha, De Cuyo Nombre No Quiero Acordarme.\n",
+      "En un lugar de la mancha, de cuyo nombre no quiero acordarme.\n",
       "['En', 'un', 'lugar', 'de', 'la', 'Mancha,', 'de', 'cuyo', 'nombre', 'no', 'quiero', 'acordarme.']\n",
       "En un lugar de la Mancha; de cuyo nombre no quiero acordarme.\n",
       "En un lugr de l Mnch, de cuyo nombre no quiero cordrme.\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "verso = \"En un lugar de la Mancha, de cuyo nombre no quiero acordarme.\"\n",
+    "print(verso.upper())\n",
+    "print(verso.lower())\n",
+    "print(verso.capitalize())\n",
+    "print(verso.split())\n",
+    "print(verso.replace(\",\",\";\"))\n",
+    "print(verso.replace(\"a\",\"\"))"
+   ]
   },
   {
    "attachments": {
@@ -138,21 +164,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1. Crea una lista con 3 elementos numéricos\n",
+    "\n",
+    "mi_lista = [1,2,3]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n",
-      "[2, 3, 4]\n",
-      "[2, 3, 5, 4]\n",
-      "[2, 3, 5, 4, 6, 7, 8, 9]\n"
+      "[1, 2, 3, 4]\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# 2. Añade un cuarto elemento\n",
+    "\n",
+    "mi_lista.append(4)\n",
+    "print(mi_lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3. Calcula la suma de todos\n",
+    "\n",
+    "print(sum(mi_lista))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4. Elimina el segundo elemento de la lista\n",
+    "mi_lista.pop(1)\n",
+    "print(mi_lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5. Añade otro elemento en la posicion 3 de la lista\n",
+    "mi_lista.insert(2, 5)\n",
+    "print(mi_lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 4, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6. Crea otra lista con 4 elementos y concaténala a la que ya tenías.\n",
+    "otra_lista = [6,7,8,9]\n",
+    "nueva_lista = mi_lista + otra_lista\n",
+    "print(nueva_lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 7. Ordena la lista de menor a mayor.\n",
+    "nueva_lista.sort()\n",
+    "print(nueva_lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 8, 7, 6, 5, 4, 3, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#8. BONUS: Ordena la lista de mayor a menor. \n",
+    "nueva_lista.reverse()\n",
+    "print(nueva_lista)"
+   ]
   }
  ],
  "metadata": {
@@ -171,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
