--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Practica_Obligatoria/13_Practica_Obligatoria_Python_Basics_I.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Practica_Obligatoria/13_Practica_Obligatoria_Python_Basics_I.ipynb
@@ -67,10 +67,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buenas tardes, bienvenido al servicio de pedido online, el precio de nuestra pizzas es de 8,95 para la familiar o de 9,90 para la mediana\n",
+      "Estupendo, se están preparando 1 pizzas familiares y 1 pizzas medianas.\n",
+      "Le mandaremos las 2 pizzas a la dirección Calle Don Pepe, 3 . Serán 18.85 €. Muchas gracias por su pedido.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Buenas tardes, bienvenido al servicio de pedido online, el precio de nuestra pizzas es de 8,95 para la familiar o de 9,90 para la mediana\")\n",
+    "pizz_familiar = int(input(\"¿Cuántas pizzas  familiares desea?\"))\n",
+    "pizz_mediana = int(input(\"Estupendo, ¿cuántas pizzas medianas desea?\"))\n",
+    "print(\"Estupendo, se están preparando\", pizz_familiar,\"pizzas familiares y\", pizz_mediana, \"pizzas medianas.\")\n",
+    "direcc = str(input(\"Dígame su dirección\"))\n",
+    "total = pizz_familiar + pizz_mediana\n",
+    "precio = (pizz_familiar * 8.95 + pizz_mediana * 9.90)\n",
+    "print(\"Le mandaremos las\", total, \"pizzas a la dirección\", direcc, \". Serán\", precio, \"€. Muchas gracias por su pedido.\")"
+   ]
   },
   {
    "attachments": {
@@ -95,10 +114,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2', '3']\n",
+      "[1, 2, 3]\n",
+      "3\n",
+      "1\n",
+      "6\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Solicitar números\n",
+    "peticion = input(\"Por favor, introduzca 3 números enteros separados por comas (por ejemplo:1,2,3)\")\n",
+    "\n",
+    "#Convertir entrada en lista de números enteros (int)\n",
+    "lista_str = peticion.split(\",\")\n",
+    "print(lista_str)\n",
+    "lista_enteros = list(map(int,lista_str))\n",
+    "print(lista_enteros)\n",
+    "\n",
+    "#Determinar el máx\n",
+    "num_maximo = max(lista_enteros)\n",
+    "print(max(lista_enteros))\n",
+    "\n",
+    "#Determinar min\n",
+    "num_minimo = min(lista_enteros)\n",
+    "print(min(lista_enteros))\n",
+    "\n",
+    "#Suma de los elementos de la lista\n",
+    "total = sum(lista_enteros)\n",
+    "print(sum(lista_enteros))\n",
+    "\n",
+    "#Determine la verdad o falsedad de la siguiente afirmación: \"El número máximo menos el número mínimo es igual a la suma total dividida por 5\".\n",
+    "print((num_maximo - num_minimo) == (total/5))"
+   ]
   }
  ],
  "metadata": {
@@ -117,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
