--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Extra/14_Python_Basisc_Ejercicios_Extra.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Extra/14_Python_Basisc_Ejercicios_Extra.ipynb
@@ -44,10 +44,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "primer_input = float(input(\"Dime un número\"))\n",
+    "segundo_input = float(input(\"Dime otro número\"))\n",
+    "print((primer_input + segundo_input == 10) or (primer_input + segundo_input > 10) or (primer_input + segundo_input < 10))\n",
+    "print(primer_input + segundo_input == 10)\n",
+    "print(primer_input + segundo_input > 10)\n",
+    "print(primer_input + segundo_input < 10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -60,10 +78,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "primer_num = int(input(\"Dime un numero\"))\n",
+    "segundo_num = int(input(\"Dime otro numero\"))\n",
+    "print(primer_num + segundo_num)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,10 +124,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "¿Es 3 par?\n",
+      "El resto es 1\n",
+      "No es par\n",
+      "¿Es 8 impar?\n",
+      "El resto de 8 es 0\n",
+      "Pues es par y no impar\n"
+     ]
+    }
+   ],
+   "source": [
+    "primer_num = int(input(\"Dime un numero\"))\n",
+    "segundo_num = int(input(\"Dime otro numero\"))\n",
+    "print(primer_num + segundo_num)\n",
+    "\n",
+    "#¿Es el primer número par?\n",
+    "print(\"¿Es\", primer_num, \"par?\")\n",
+    "resto_primer_num = primer_num % 2\n",
+    "print(\"El resto es\", resto_primer_num)\n",
+    "if resto_primer_num == 0:\n",
+    "    print(\"Pues sí que es par\")\n",
+    "else:\n",
+    "    print(\"No es par\")\n",
+    "\n",
+    "#¿Es el segundo número impar?\n",
+    "print(\"¿Es\", segundo_num, \"impar?\")\n",
+    "resto_segundo_num = segundo_num % 2\n",
+    "print(\"El resto de\", segundo_num, \"es\", resto_segundo_num)\n",
+    "if resto_segundo_num == 0:\n",
+    "    print(\"Pues es par y no impar\")\n",
+    "else:\n",
+    "    print(\"Sí que es impar\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,10 +177,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "¿Es 5 par?\n",
+      "El resto es 1\n",
+      "No es par\n",
+      "¿Es 0 impar?\n",
+      "El resto de 0 es 0\n",
+      "Pues es par y no impar\n"
+     ]
+    }
+   ],
+   "source": [
+    "primer_num = int(input(\"Dime un numero\"))\n",
+    "segundo_num = int(input(\"Dime otro numero\"))\n",
+    "print(primer_num + segundo_num)\n",
+    "\n",
+    "#¿Es el primer número par?\n",
+    "print(\"¿Es\", primer_num, \"par?\")\n",
+    "resto_primer_num = primer_num % 2\n",
+    "print(\"El resto es\", resto_primer_num)\n",
+    "if resto_primer_num == 0:\n",
+    "    print(\"Pues sí que es par\")\n",
+    "else:\n",
+    "    print(\"No es par\")\n",
+    "\n",
+    "#¿Es el segundo número impar?\n",
+    "print(\"¿Es\", segundo_num, \"impar?\")\n",
+    "resto_segundo_num = segundo_num % 2\n",
+    "print(\"El resto de\", segundo_num, \"es\", resto_segundo_num)\n",
+    "if resto_segundo_num == 0:\n",
+    "    print(\"Pues es par y no impar\")\n",
+    "else:\n",
+    "    print(\"Sí que es impar\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,8 +237,86 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['La', 'primera', 'vez', 'que', 'conocí', 'a', 'Terry', 'Lenox']\n",
+      "['La', 'primera', 'vez', 'que', 'conocí', 'a', 'John', 'Lenox']\n",
+      "['La', 'primera', 'vez', 'que', 'conocí', 'a', 'John', 'Lenox']\n",
+      "['a', 'conocí', 'John', 'La', 'Lenox', 'primera', 'que', 'vez']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Convertir una frase en lista con sus elementos\n",
+    "\n",
+    "frase = \"La primera vez que conocí a Terry Lenox\"\n",
+    "lista = frase.split()\n",
+    "print(lista)\n",
+    "\n",
+    "# Cambiar de dos formas diferentes \"Terry\" por \"John\"\n",
+    "lista[6]= \"John\"\n",
+    "print(lista)\n",
+    "\n",
+    "#Cambiar de otra forma. Primero eliminando de la posición y luego insertando el nuevo elemento en la posición.\n",
+    "lista.pop(6)\n",
+    "lista.insert(6,\"John\")\n",
+    "print(lista)\n",
+    "\n",
+    "#Ordenar alfabéticamente\n",
+    "lista_ordenada = sorted(lista, key=str.casefold)\n",
+    "print(lista_ordenada)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Primera linea\\nsegunda linea\\ntercera linea'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\\n\".join([\"Primera linea\",\"segunda linea\",\"tercera linea\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La primera vez que conocí a Terry Lenox\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = ['La', 'primera', 'vez', 'que', 'conocí', 'a', 'Terry', 'Lenox']\n",
+    "crear_string = (\" \").join(lista)\n",
+    "print(crear_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -156,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
