--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Practica_Obligatoria/13_Practica_Obligatoria_Python_Basics_I.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Practica_Obligatoria/13_Practica_Obligatoria_Python_Basics_I.ipynb
@@ -67,6 +67,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le mandaremos las 4 pizzas a la dirección Calle Rio . Serán 37.7 €. Muchas gracias por su pedido.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pizz_familiar = int(input(\"Buenas tardes, bienvenido al servicio de pedido online, el precio de nuestra pizzas es de 8,95 para la familiar o de 9,90 para la mediana. ¿Cuántas pizzas  familiares desea?\"))\n",
+    "pizz_mediana = int(input(\"Estupendo, ¿cuántas pizzas medianas desea?\"))\n",
+    "direcc = (input(\"Estupendo, se están preparando \" + str(pizz_familiar) + \" pizzas familiares y \" + str(pizz_mediana) + \" pizzas medianas. Dígame su dirección\"))\n",
+    "total = pizz_familiar + pizz_mediana\n",
+    "precio = (pizz_familiar * 8.95 + pizz_mediana * 9.90)\n",
+    "print(\"Le mandaremos las\", total, \"pizzas a la dirección\", direcc, \". Serán\", precio, \"€. Muchas gracias por su pedido.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le mandaremos las 4 pizzas a la dirección Calle Rio . Serán 37.7 €. Muchas gracias por su pedido. "
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Le mandaremos las\", total, \"pizzas a la dirección\", direcc, \". Serán\", precio, \"€. Muchas gracias por su pedido.\", end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le mandaremos las 4 pizzas a la dirección Calle Rio. Serán 37.70€. Muchas gracias por su pedido.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Le mandaremos las %d pizzas a la dirección %s. Serán %.2f€. Muchas gracias por su pedido.\" % (total, direcc, precio))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -74,21 +130,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Buenas tardes, bienvenido al servicio de pedido online, el precio de nuestra pizzas es de 8,95 para la familiar o de 9,90 para la mediana\n",
-      "Estupendo, se están preparando 1 pizzas familiares y 1 pizzas medianas.\n",
-      "Le mandaremos las 2 pizzas a la dirección Calle Don Pepe, 3 . Serán 18.85 €. Muchas gracias por su pedido.\n"
+      "Le mandaremos las 4 pizzas a la dirección Calle Rio. Serán 37.7€. Muchas gracias por su pedido.\n"
      ]
     }
    ],
    "source": [
-    "print(\"Buenas tardes, bienvenido al servicio de pedido online, el precio de nuestra pizzas es de 8,95 para la familiar o de 9,90 para la mediana\")\n",
-    "pizz_familiar = int(input(\"¿Cuántas pizzas  familiares desea?\"))\n",
-    "pizz_mediana = int(input(\"Estupendo, ¿cuántas pizzas medianas desea?\"))\n",
-    "print(\"Estupendo, se están preparando\", pizz_familiar,\"pizzas familiares y\", pizz_mediana, \"pizzas medianas.\")\n",
-    "direcc = str(input(\"Dígame su dirección\"))\n",
-    "total = pizz_familiar + pizz_mediana\n",
-    "precio = (pizz_familiar * 8.95 + pizz_mediana * 9.90)\n",
-    "print(\"Le mandaremos las\", total, \"pizzas a la dirección\", direcc, \". Serán\", precio, \"€. Muchas gracias por su pedido.\")"
+    "print(f\"Le mandaremos las {total} pizzas a la dirección {direcc}. Serán {precio}€. Muchas gracias por su pedido.\")"
    ]
   },
   {
@@ -114,19 +161,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1', '2', '3']\n",
-      "[1, 2, 3]\n",
-      "3\n",
-      "1\n",
-      "6\n",
-      "False\n"
+      "['4', '4', '2']\n",
+      "[4, 4, 2]\n",
+      "4\n",
+      "2\n",
+      "10\n",
+      "True\n",
+      "El máximo es 4, el mínimo es 2, y la suma, 10\n"
      ]
     }
    ],
@@ -153,8 +201,17 @@
     "print(sum(lista_enteros))\n",
     "\n",
     "#Determine la verdad o falsedad de la siguiente afirmación: \"El número máximo menos el número mínimo es igual a la suma total dividida por 5\".\n",
-    "print((num_maximo - num_minimo) == (total/5))"
+    "print((num_maximo - num_minimo) == (total/5))\n",
+    "\n",
+    "print(f\"El máximo es {num_maximo}, el mínimo es {num_minimo}, y la suma, {total}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
