--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_03/Ejercicios_Repaso/Ejercicios_Bucles_if_for.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_03/Ejercicios_Repaso/Ejercicios_Bucles_if_for.ipynb
@@ -53,10 +53,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Audi', 'Renault', 'BMW']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_1 = [\"VW\", \"Audi\", \"Renault\", \"VW\", \"BMW\"]\n",
+    "nueva_lista = []\n",
+    "for i in ejer_1:\n",
+    "    if i == \"VW\":\n",
+    "        continue\n",
+    "    nueva_lista.append(i)\n",
+    "print(nueva_lista)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +83,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Audi', 'Renault', 'BMW']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_1 = [\"VW\", \"Audi\", \"Renault\", \"VW\", \"BMW\"]\n",
+    "ejer_2 = []\n",
+    "for i in ejer_1:\n",
+    "    if i != \"VW\":\n",
+    "        ejer_2.append(i)\n",
+    "print(ejer_2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +112,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Audi', 'Renault', 'BMW']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_1 = [\"VW\", \"Audi\", \"Renault\", \"VW\", \"BMW\"]\n",
+    "ejer_3 = list(ejer_1)  # Crear una copia de la lista original\n",
+    "\n",
+    "i = 0\n",
+    "while i < len(ejer_3):\n",
+    "    if ejer_3[i] == \"VW\":\n",
+    "        ejer_3.remove(ejer_3[i])\n",
+    "    else:\n",
+    "        i += 1\n",
+    "\n",
+    "print(ejer_3)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +147,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0, -1, -2, -3, -4, -5, -6, -7, -8, -9, -10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "resultado = []\n",
+    "for i in range(10,-11,-1):\n",
+    "    resultado.append(i)\n",
+    "print(resultado)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "-1\n",
+      "-2\n",
+      "-3\n",
+      "-4\n",
+      "-5\n",
+      "-6\n",
+      "-7\n",
+      "-8\n",
+      "-9\n",
+      "-10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (10,-11,-1):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,10 +214,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número de veces que se repite la letra 'm' o 'M' es 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "frase = \"En un lugar de La Mancha, de cuyo nombre no quiero acordarme\"\n",
+    "\n",
+    "contador = 0\n",
+    "for char in frase:\n",
+    "    if char == \"m\" or char == \"M\":\n",
+    "        contador += 1 #Recuerda que el incremento se pone +=1\n",
+    "print(\"El número de veces que se repite la letra 'm' o 'M' es\", contador)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,6 +241,79 @@
    "source": [
     "## Ejercicio 4\n",
     "Imprime toda la secuencia de numeros del 1 al 10, excepto el 3, 4 y 9. Impleméntalo de dos maneras diferentes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 5, 6, 7, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Una primera forma de hacerlo con bucle for y continue\n",
+    "\n",
+    "secuencia = []\n",
+    "for i in range (1,11):\n",
+    "    if i == 3 or i ==4 or i==9:\n",
+    "        continue\n",
+    "    secuencia.append(i)\n",
+    "print(secuencia)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,11):\n",
+    "    if i == 3 or i ==4 or i==9:\n",
+    "        continue\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 5, 6, 7, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Otra forma de hacerlo exluyendo de antemano una lista de números peligrosos:\n",
+    "lista_fuera = [3,4,9]\n",
+    "lista_buena = []\n",
+    "for i in range(1,11):\n",
+    "    if i not in lista_fuera:\n",
+    "        lista_buena.append(i)\n",
+    "print(lista_buena)"
    ]
   },
   {
@@ -149,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
