--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Ejercicios_Warmup/00_wup2_Ejercicio_While.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Ejercicios_Warmup/00_wup2_Ejercicio_While.ipynb
@@ -42,6 +42,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "while i < 6:\n",
+    "  print(i)\n",
+    "  i += 1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -78,6 +102,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La fuerza del jugador es de 5\n",
+      "La fuerza del jugador es de 5\n",
+      "La fuerza del jugador es de 6\n",
+      "La fuerza del jugador es de 7\n",
+      "La fuerza del jugador es de 8\n",
+      "La fuerza del jugador es de 9\n",
+      "Eres demadiado fuerte. Has avanzado a un nuevo nivel de juego\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Crea una variable llamada fuerza y establece su valor inicial en 5.\n",
+    "\n",
+    "fuerza = 5\n",
+    "print(f\"La fuerza del jugador es de\", fuerza)\n",
+    "while fuerza < 10:\n",
+    "    print(f\"La fuerza del jugador es de\", fuerza)\n",
+    "    fuerza +=1\n",
+    "print(\"Eres demadiado fuerte. Has avanzado a un nuevo nivel de juego\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -100,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
