--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Ejercicios_Warmup/00_wup1_Ejercicio_Biblioteca.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Ejercicios_Warmup/00_wup1_Ejercicio_Biblioteca.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,11 +68,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here\n"
+    "titulos = len(libros)\n",
+    "print(len(libros))"
    ]
   },
   {
@@ -84,11 +93,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here\n"
+    "print(len(\"Seda\"))"
    ]
   },
   {
@@ -100,11 +117,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Del libro Seda hay 2 ejemplares\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here\n"
+    "for libro, numero in biblioteca:\n",
+    "    if libro == \"Seda\":\n",
+    "        print(f\"Del libro\", libro, \"hay\", numero, \"ejemplares\")"
    ]
   },
   {
@@ -117,20 +144,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['El mal de Corcira', 'Un mundo feliz', 'Lolita', 'Crimen y castigo', 'Python from for to pro', 'El señor de los anillos', 'Cien años de soledad', 'Harry Potter', 'Lectura Fácil', 'Seda', 'La chica de nieve', 'El día que se perdió la cordura', 'Data Science', '1984']\n"
+     ]
+    }
+   ],
    "source": [
-    "pendiente = 1984"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#your code here"
+    "pendiente = 1984\n",
+    "libros.append(\"1984\")\n",
+    "print(libros)"
    ]
   },
   {
@@ -153,11 +181,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "[('El mal de Corcira', 4), ('Un mundo feliz', 2), ('Lolita', 5), ('Crimen y castigo', 2), ('Python from for to pro', 0), ('El señor de los anillos', 6), ('Cien años de soledad', 5), ('Harry Potter', 9), ('Lectura Fácil', 4), ('Seda', 2), ('La chica de nieve', 6), ('El día que se perdió la cordura', 3), ('Data Science', 0), ('Balada de pájaros cantores y serpientes', 10), ('Balada de pájaros cantores y serpientes', 10)]\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here\n"
+    "libro_1 = \"Balada de pájaros cantores y serpientes\"\n",
+    "uds_1 = 10\n",
+    "nuevo_libro = [libro_1, uds_1]\n",
+    "nuevo_libro = tuple(nuevo_libro)\n",
+    "print(type(nuevo_libro))\n",
+    "biblioteca.append(nuevo_libro)\n",
+    "print(biblioteca)"
    ]
   },
   {
@@ -169,63 +212,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "('El mal de Corcira', 4)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "biblioteca[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "biblioteca[0][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'tuple' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-8a7bcc0d7ddc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbiblioteca\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbiblioteca\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('El mal de Corcira', 5), ('Un mundo feliz', 2), ('Lolita', 5), ('Crimen y castigo', 2), ('Python from for to pro', 0), ('El señor de los anillos', 6), ('Cien años de soledad', 5), ('Harry Potter', 9), ('Lectura Fácil', 4), ('Seda', 2), ('La chica de nieve', 6), ('El día que se perdió la cordura', 3), ('Data Science', 0), ('Balada de pájaros cantores y serpientes', 10), ('Balada de pájaros cantores y serpientes', 10)]\n",
+      "<class 'tuple'>\n"
      ]
     }
    ],
    "source": [
-    "biblioteca[0][1] = biblioteca[0][1] - 1"
+    "for libro, numero in biblioteca:\n",
+    "    if libro == \"El mal de Corcira\":\n",
+    "        numero +=1\n",
+    "        print(biblioteca)\n",
+    "\n"
    ]
   },
   {
@@ -253,11 +257,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('El mal de Corcira', 5),\n",
+       " ('Un mundo feliz', 2),\n",
+       " ('Lolita', 5),\n",
+       " ('Crimen y castigo', 2),\n",
+       " ('Python from for to pro', 0),\n",
+       " ('El señor de los anillos', 6),\n",
+       " ('Cien años de soledad', 5),\n",
+       " ('Harry Potter', 9),\n",
+       " ('Lectura Fácil', 4),\n",
+       " ('Seda', 2),\n",
+       " ('La chica de nieve', 6),\n",
+       " ('El día que se perdió la cordura', 3),\n",
+       " ('Data Science', 0),\n",
+       " ('Balada de pájaros cantores y serpientes', 10),\n",
+       " ('Balada de pájaros cantores y serpientes', 10)]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code here\n"
+    "print(type(biblioteca[0]))\n",
+    "list(biblioteca[0:])"
    ]
   },
   {
@@ -287,11 +324,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python from for to pro\n",
+      "Data Science\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here\n"
+    "for libro, numero in biblioteca:\n",
+    "    if numero == 0:\n",
+    "        print(libro)"
    ]
   },
   {
@@ -303,12 +351,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Python from for to pro', 'Data Science']\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing = []\n",
+    "for libro, numero in biblioteca:\n",
+    "    if numero == 0:\n",
+    "        missing.append(libro)\n",
+    "print(missing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -327,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
