--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Ejercicios_Workout/10_Ejercicio_Python_Basics_II_1.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Ejercicios_Workout/10_Ejercicio_Python_Basics_II_1.ipynb
@@ -87,10 +87,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pepe\n",
+      "Carmen\n",
+      "Toni\n",
+      "['Carmen', 'Pepe', 'Toni']\n",
+      "Pepe\n",
+      "['Pepe', 'Carmen']\n",
+      "['Pepe', 'Manolita', 'Carmen']\n"
+     ]
+    }
+   ],
+   "source": [
+    "invitados = [\"Pepe\", \"Carmen\", \"Toni\"]\n",
+    "\n",
+    "# Imprimir cada uno \n",
+    "for i in invitados:\n",
+    "    print(i)\n",
+    "\n",
+    "# Ordena alfabéticamente la lista\n",
+    "print(sorted(invitados))\n",
+    "\n",
+    "# Buscar el primer elemento de la lista\n",
+    "print(invitados[0])\n",
+    "\n",
+    "# Eliminar un invitado de la lista\n",
+    "invitados.index(\"Toni\")\n",
+    "invitados.pop(2)\n",
+    "print(invitados)\n",
+    "\n",
+    "\n",
+    "#Añadir otra persona a mitad de la lista \n",
+    "invitados.insert(1, \"Manolita\")\n",
+    "print(invitados)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,10 +166,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "<class 'tuple'>\n",
+      "[15, 'Hola', 12, True]\n",
+      "(15, 'Hola', 12, True) <class 'tuple'>\n",
+      "(15, 'Hola')\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Crea una tupla con un único valor y comprueba su tipo\n",
+    "tupla = (15,)\n",
+    "print(type(tupla))\n",
+    "\n",
+    "#Crea una tupla con 3 elementos \n",
+    "tupla_nueva = (\"Hola\", 12, True)\n",
+    "print(type(tupla_nueva))\n",
+    "\n",
+    "#Añadir a la primera tupla los tres elementos de la segunda \n",
+    "tupla = list(tupla)\n",
+    "tupla_nueva = list(tupla_nueva)\n",
+    "lista = tupla + tupla_nueva\n",
+    "print(lista)\n",
+    "tupla_3 = tuple(lista)\n",
+    "print(tupla_3, type(tupla_3))\n",
+    "\n",
+    "#Crear una cuarta tupla a partir de los dos primeros valores de la tupla creada anterior\n",
+    "\n",
+    "tupla_4 = tupla_3[0:2]\n",
+    "print(tupla_4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,10 +237,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_3 = [1,2,3,4,5,6]\n",
+    "ejer_3_inv = (sorted(ejer_3, reverse=True))\n",
+    "print(ejer_3_inv)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,10 +285,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cien cañones por banda\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_4 = (\"cien\", \"cañones\", \"por\", \"banda\")\n",
+    "print(\" \".join(ejer_4))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -238,10 +330,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 47, 19, 29, 0, 67, 78, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_5 = [20, 47, 19, 29, 45, 67, 78, 90]\n",
+    "ejer_5.index(45)\n",
+    "ejer_5[4] = 0\n",
+    "print(ejer_5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -273,10 +378,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_6 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3)\n",
+    "\n",
+    "#Obtener el tercer elemento\n",
+    "print(ejer_6[2])\n",
+    "\n",
+    "#Obtener el tercero por la cola\n",
+    "print(ejer_6[-3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -309,6 +431,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 47, 19, 29, 45, 67, 78, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_7 = [3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3]\n",
+    "ejer_7_cambiado = []\n",
+    "\n",
+    "for i in ejer_7:\n",
+    "    if i ==3:\n",
+    "        continue\n",
+    "    ejer_7_cambiado.append(i)\n",
+    "\n",
+    "print(ejer_7_cambiado)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -331,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
