--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Ejercicios_Workout/11_Ejercicio_Python_Basics_II_2.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Ejercicios_Workout/11_Ejercicio_Python_Basics_II_2.ipynb
@@ -130,10 +130,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(2, 98), (4, 78), (5, 29), (8, 234)]\n",
+      "[(5, 29), (4, 78), (2, 98), (8, 234)]\n",
+      "{4: 78, 2: 98, 8: 234, 5: 29, 10: 42}\n",
+      "La segunda clave del diccionario es: 2\n",
+      "Clave: 4, Valor: 78\n",
+      "Clave: 2, Valor: 98\n",
+      "Clave: 8, Valor: 234\n",
+      "Clave: 5, Valor: 29\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Crear una lista ordenada ascendente con las claves\n",
+    "ejer_2 = {4:78, 2:98, 8:234, 5:29}\n",
+    "ejer_2_ascendente = sorted(ejer_2.items())\n",
+    "print(ejer_2_ascendente)\n",
+    "\n",
+    "#Crear una lista descendente con los valores \n",
+    "ejer_2_ordenado_asc_valores = (sorted(ejer_2.items(), key=lambda item: item[1]))\n",
+    "print(ejer_2_ordenado_asc_valores)\n",
+    "\n",
+    "#Añadir una nueva clave/valor\n",
+    "nueva_clave = 10\n",
+    "nuevo_valor = 42\n",
+    "\n",
+    "ejer_2[nueva_clave] = nuevo_valor\n",
+    "print(ejer_2)\n",
+    "\n",
+    "#Buscar la clave 2 del diccionario\n",
+    "ejer_2 = {4: 78, 2: 98, 8: 234, 5: 29}\n",
+    "\n",
+    "# Obtener la segunda clave del diccionario\n",
+    "claves_lista = list(ejer_2.keys())\n",
+    "\n",
+    "if len(claves_lista) > 1:\n",
+    "    segunda_clave = claves_lista[1]\n",
+    "    print(f\"La segunda clave del diccionario es: {segunda_clave}\")\n",
+    "else:\n",
+    "    print(\"El diccionario no tiene suficientes claves para obtener la segunda.\")\n",
+    "\n",
+    "\n",
+    "#Iterar la clave y el valor del diccionario con un único for \n",
+    "\n",
+    "ejer_2 = {4: 78, 2: 98, 8: 234, 5: 29}\n",
+    "\n",
+    "for clave, valor in ejer_2.items():\n",
+    "    print(f\"Clave: {clave}, Valor: {valor}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,10 +221,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_3_1 = {1: 11, 2: 22}\n",
+    "ejer_3_2 = {3: 33, 4: 44}\n",
+    "\n",
+    "print(ejer_3_1.update(ejer_3_2))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -241,10 +305,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "165\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_5 = {1: 11, 2: 22, 3: 33, 4: 44, 5: 55}\n",
+    "print(sum(list(ejer_5.values())))\n"
+   ]
   },
   {
    "cell_type": "markdown",
